<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <im.threads.ui.widget.CustomFontButton
        android:id="@+id/camera"
        style="@style/Base.Widget.AppCompat.Button.Borderless.BottomSheetButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ecc_camera" />

    <im.threads.ui.widget.CustomFontButton
        android:id="@+id/gallery"
        style="@style/Base.Widget.AppCompat.Button.Borderless.BottomSheetButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ecc_gallery" />

    <im.threads.ui.widget.CustomFontButton
        android:id="@+id/file"
        style="@style/Base.Widget.AppCompat.Button.Borderless.BottomSheetButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ecc_file" />

    <im.threads.ui.widget.CustomFontButton
        android:id="@+id/send"
        style="@style/Base.Widget.AppCompat.Button.Borderless.BottomSheetButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/ecc_send"
        android:visibility="gone" />
</merge>