<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ecc_files_medias_screen_background"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"/>

    <View
        android:id="@+id/toolbarShadow"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/ecc_toolbar_shadow" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ecc_toolbar_height"
        android:background="@color/ecc_chat_toolbar"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                app:srcCompat="@drawable/ecc_ic_arrow_back_24dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/ecc_toolbar_height"
                android:layout_toEndOf="@id/back_button"
                android:text="@string/ecc_files_and_media"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ecc_text_big"/>

            <im.threads.ui.widget.CustomFontEditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_toEndOf="@id/back_button"
                android:background="@null"
                android:hint="@string/ecc_search_files"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/ecc_chat_toolbar_text"
                android:textColorHint="@color/ecc_chat_toolbar_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/ecc_text_big"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ecc_talkback_search_icon"
                android:visibility="gone"
                app:srcCompat="@drawable/ecc_ic_search_white_24dp" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/emptyListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/ecc_margin_material"
        android:layout_marginEnd="@dimen/ecc_margin_material"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/emptyListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="@string/ecc_no_media_and_files_header" />

        <TextView
            android:id="@+id/emptyListDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ecc_margin_half"
            android:gravity="center"
            tools:text="@string/ecc_no_media_and_files_description" />

    </LinearLayout>

</RelativeLayout>