<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <View
        android:id="@+id/top_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="@dimen/ecc_activity_horizontal_margin"
        android:background="@color/ecc_icon_and_separators_color" />

    <im.threads.ui.widget.textView.BubbleMessageTextView
        android:id="@+id/request_to_resolve_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/ecc_text_regular"
        android:paddingLeft="@dimen/ecc_margin_material"
        android:paddingRight="@dimen/ecc_margin_material"
        android:textColor="@color/ecc_chat_system_message"
        android:text="@string/ecc_request_to_resolve_thread"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ecc_margin_material"
        android:orientation="horizontal">

        <im.threads.ui.widget.textView.BubbleMessageTextView
            android:id="@+id/deny_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ecc_text_big"
            android:paddingLeft="@dimen/ecc_margin_material"
            android:paddingRight="@dimen/ecc_margin_material"
            android:text="@string/ecc_request_to_resolve_thread_open"
            android:textColor="@color/ecc_survey_choices_text"
            android:gravity="center"
            android:lines="1"/>

        <im.threads.ui.widget.textView.BubbleMessageTextView
            android:id="@+id/approve_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ecc_text_big"
            android:paddingLeft="@dimen/ecc_margin_material"
            android:paddingRight="@dimen/ecc_margin_material"
            android:text="@string/ecc_request_to_resolve_thread_close"
            android:textColor="@color/ecc_survey_choices_text"
            android:gravity="center"
            android:lines="1"/>
    </LinearLayout>

    <View
        android:id="@+id/bottom_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="@dimen/ecc_activity_horizontal_margin"
        android:background="@color/ecc_icon_and_separators_color"/>

</LinearLayout>